update for WMAP9; start python/chains.py

--- a/readme_planck.html
+++ b/readme_planck.html
@@ -44,35 +44,42 @@ Use runbatch.py to submit all the ini files produced to the queue. You will also
 <P>
 Runs with the same data by default all use the same covmat unless an existing covmat exists in planck_covmats. Covmats can be a merged covmat that contains many parameters, defaults are provided from combining several different separate covmats for use where no planck_covmats file exists. Use the python/covcomb.py script if you want to make a new one.
 <p>
-Scripts include:
+Grid run scripts include:
 <UL>
 <LI>makeGrid.py: as descried above, for setting up a grid of models. Stores the information in a "pickle" file that can then be read by the other scripts for iterating over batch items.
     <LI>addGridBatch.py: if you run multiple grids, e.g. a standard one and a separate small one for some parameter for interest, they can be combined using addGridBatch.py. Also use if the main batch importance samples some data, but a few of the models need to be run separately as chains: the script automatically replaces importance sampled runs with full chain runs if there is an overlap.
 <LI>batchJob.py: not a script, this just defines the objects and iterators used
-<LI>covcomb.py: for combining covariance matrices (thanks Steven!)
-<LI>covscale.py: for modifying .covmat files if parameters are re-scaled
-<LI>covMat.py: object for covariance matrix and reading .covmat
 <LI>extractDistFiles.py: for copying all files of a particular type from all the subdirectories in the grid, e.g. to extract all .covmat files, or all .pdf plots
-<LI>iniFile.py: for reading and writing .ini files (does not support reading fully at the moment, but not needed as yet)
-<LI>makePerfectForecastDataset.py: a simple old script for simulating perfect fake CMB datasets
 <LI>makeTables.py: script for making latex (and hence PDF) tables from .margestats and .minimum files produced by grid runs.
 <BR>To make file of comparison plots do something like
 <pre>
  python python/makeTables.py main comp --compare planck_CAMspec_lowl planck_CAMspec_lowl_lowLike  planck_CAMspec_lowl_lowLike_highL --portrait
 </pre>
-<LI>paramNames.py: for reading paramNames files, and general objects for storing parameter info
-<LI>ResultObjs.py: objects for getdist output results (.margestats) and .minimum files. Note is expects formats to be those produced by cosmomcplanck, not older versions.
 <LI>runBatch.py: submit runs to a job submission script
 <LI>runGridGetdist.py: make getdist .ini files, run getdist over grid of models, and generate plots by running matlab.
+<LI>settings_xx.py: sample settings files for use with makeGrid.py
 </UL>
-Many scripts have standardized input parameters to restrict to subsets of grid items, e.g. filtering by importance sampling run, no importance sampling, or specific item name (pattern match).
+Most scripts have standardized input parameters to restrict to subsets of grid items, e.g. filtering by importance sampling run, no importance sampling, or specific item name (pattern match).
+<P>
+Multi-purpose use and utility scripts include
+<UL>
+<LI>chains.py: under development, not used by anything else (could make base for python version of GetDist)
+<LI>covcomb.py: for combining covariance matrices (thanks Steven!)
+<LI>covscale.py: for modifying .covmat files if parameters are re-scaled
+<LI>covMat.py: object for covariance matrix and reading .covmat
+<LI>GetDistPlots.py: make pylab-matplotlib plots from getdist outputs (alternative to matlab,with some additional flexibility)
+<LI>iniFile.py: for reading and writing .ini files (does not support reading fully at the moment, but not needed as yet)
+<LI>makePerfectForecastDataset.py: a simple old script for simulating perfect fake CMB datasets
+<LI>paramNames.py: for reading paramNames files, and general objects for storing parameter info
+<LI>ResultObjs.py: objects for getdist output results (.margestats) and .minimum files. Note is expects formats to be those produced by cosmomcplanck, not older versions.
+</UL>
 
 <h2>Plots</h2>
 The runGridGetdist.py script will produce standard sets of getdist plots automatically for all runs. These can be customized in parameter-variation-specific way by adding additional getdist .ini include files in batch1\plots. Further completely general plots with custom matlab scripts can be installed in batch1\specificplots. These can use new matlab functions getdist_xxx provided in the mscripts directory (which must be added to your path if you want to run them directly in matlab; you can also set the getdist_plot_data environment variable so it knows where to look for getdist grid outputs; runGridGetdist sets up paths automatically).
 
 <h2>To do</h2>
 
-Lensing likelihood. Define consistent priors for nuisance parameters. Efficient use of fast highL nuisance parameters. Uncorrelated isocuvature? Figure out consistent way to handle mnu with non-standard nnu.
+ efine consistent priors for nuisance parameters. Uncorrelated isocuvature? Figure out consistent way to handle mnu with non-standard nnu.
 
 
 
