--- a/readme.html
+++ b/readme.html
@@ -536,6 +536,8 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI><B>non-public Planck-only changes (for now)</B><BR>
 <UL>
+<LI>Added <b>redo_no_new_data</b> option to redo only a specific likelihood when importance sampling
+<LI>Added support for massive neutrinos with varying n_eff (nnu), treating massive as nearly thermal and the rest as massless (for n>3.046), or reducing the temperature of the massive neutrinos for n<3.046.
 <LI>Output chains .txt files only include parameters that are actually varied (specified in .paramnames file; .ranges file specifies all parameters with ranges, including fixed parameters)
 <LI>Updated for WMAP9 (edit the Makefile in your wmap_likelihood_v5 directory appropriately first, and set data path as for WMAP7 before compiling).
 <LI>Reorganized parameterization class and module implementation; can now set H0_min and H0_max as .ini input parameters. Added <b>parameterization=background</b> option (e.g. for supernovae-only runs): parameter numbers can now be changed dynamically without re-compiling.
