--- a/readme.html
+++ b/readme.html
@@ -537,6 +537,7 @@ weighting function or parameter mapping.</ul>
 <LI><B>non-public Planck-only changes (for now)</B><BR>
 <UL>
 <LI>
+<LI>GetDist parameter credible_interval_threshold to determine when credible intervals or tail integrals are used
 <LI>CAMB (and CosmoMC) updated fixes issues with larger neutrino masses (Mar 2013 version now)
 <LI>Minimizer uses fast and slow subspaces for speed and sanity check on convergence
 <LI>GetDist .margestats has new format, with separate limit type for each confidence
