tidy up line endings; chains.py reweighting

--- a/readme.html
+++ b/readme.html
@@ -66,7 +66,7 @@ Please e-mail details of any bugs or enhancements to <a href="http://cosmologist
 
 
 <A NAME="Compiling"><h2>Downloading and Compiling</h2></A>
-You will need a Fortran 2003 (or higher) compiler - Intel Fortran 13 or higher works (earlier versions probably will not). Others may, but gfortran <i>does</i> not support Fortran 2003 well enough at the moment.
+You will need a Fortran 2003 (or higher) compiler - Intel Fortran 13 or higher works (earlier versions probably will not). Others may, but gfortran <i>does not</i> support Fortran 2003 well enough at the moment.
 <!--
 Two options:
 <UL>
