--- a/readme_planck.html
+++ b/readme_planck.html
@@ -12,7 +12,7 @@ The Planck likelihood code (PLC/clik) and parameter chains are available from th
 Here I assume you have installed CosmoMC in a directory called COSMOMC..PATH, and the plc in a directory called PLC..PATH.
 Note you need to use ifort 13 or higher to build CosmoMC, so make sure you have that configured before you start.
 <UL>
-<LI>Download and extract the plc_1.0 directories
+<LI>Download and extract the plc_1.0 directories somewhere convenient, probably not under cosmomc.
 <LI>Change to the plc_1.0  directory and do 
 <pre>bzip2 -d plc-1.0.tar.bz2; tar -xf plc-1.0.tar</pre>
 <LI><pre>cd plc-1.0</pre>
@@ -33,8 +33,8 @@ export PYTHONPATH=COSMOMC..PATH/python:$PYTHONPATH
 <pre>
 ln -s PLC..PATH/plc_1.0 ./data/clik
 </pre>
-(CosmoMC will look for files in data/clik).
-<LI>Now you can build cosmomc as described in the <A HREF="readme.html">ReadMe</A>.
+(CosmoMC will look for files in ./data/clik).
+<LI>Log out and in again to get the new settings,  then you can build cosmomc as described in the <A HREF="readme.html">ReadMe</A>.
 </UL>
 
 <h3>CosmoMC settings</h3>
