--- a/readme_planck.html
+++ b/readme_planck.html
@@ -36,12 +36,35 @@ ln -s PLC..PATH/plc_1.0 ./data/clik
 (CosmoMC will look for files in ./data/clik).
 <LI>Log out and in again to get the new settings,  then you can build cosmomc as described in the <A HREF="readme.html">ReadMe</A>.
 </UL>
-
-<h3>CosmoMC settings</h3>
-A set of .ini files are supplied in ./planck1 which set up standards for Planck runs. Location of data files is set in CAMspec_ACTSPT_defaults, CAMspec_defaults depending on what you want to use.
-You can either edit these, or make symbolic links from ./data/clik to the relevant actual file locations depending on what you want to use
+A set of .ini files are supplied in ./batch1 which set up standards for Planck runs. Location of data files is set in CAMspec_ACTSPT_defaults, CAMspec_defaults depending on what you want to use. You can try
+<pre>mpirun -np 2 ./cosmomc test.ini</pre>
+to see if things are being loaded and start running OK.
 <P>
+<H3>Using Planck Chains</H3>
+Planck provide a set of parameter chains produced by CosmoMC. You can use CosmoMC's python scripts and getdist to analyse and make plots from them. First download and extract all the chain data. Make a symlink from ./cosmomc/PLA to the location of the chains, e.g.
+<PRE>
+ln -s /scratch/planck/PLA ./PLA
+</PRE>
+For the program to know about the structure of the grid you first need to initialize it for the location you have installed in. Do
+<PRE>
+python python/makeGrid.py PLA settings_planck_nominal
+</PRE>
+When done it will tell you the commands needed to run and reproduce the chains. But of course you don't need to do that, you have the chains already. You can now use the python/* scripts on the PLA directory, and they will know about the available data.
 Settings for the Planck parameter grid are in python/settings_planck_nominal.py.
-
-
+<H4>Plotting</H4>
+To make plots from the grid you need to first run getdist over the grid. To do this make sure you have installed and compiled CosmoMC (with getdist) then run
+<PRE>
+python python/runGridGetdist.py PLA
+</PRE>
+This may take a while. It generates a VERY large number of plotting files in PLA/plot_data for the entire grid. You can use optional parameters for runGridGetdist.py if you want to restrict to specific models; run <b>python python/runGridGetdist.py</b> to see the full list of options. For example if you are only interested in models with massive neutrinos using Planck data you could do
+<PRE>
+python python/runGridGetdist.py PLA --paramtag base_mnu --data planck
+</PRE>
+Getdist generates .m scripts in each PLA/../../dist subfolder, which you can run in matlab. Or, now usually recommended, use the python scripts. You can use <B>python python/makePlots.py PLA  ..</B> to make plots en masse. See <b>batch1/outputs/makeGridPlots</b> for examples. 
+<P>
+You can also write your own short python scripts to plot things of interest; many examples are in <b>batch1/outputs/</b>. For example, assuming you've done runGridGetdist on the base planck and WMAP chains, you can do
+<pre>
+python batch1/outputs/triangle_planckonly_vs_WMAP.py
+</pre>
+to reproduce the figure in Section 3 of the Planck parameter paper.
 </body>
