--- a/readme_planck.html
+++ b/readme_planck.html
@@ -13,7 +13,7 @@ Here I assume you have installed CosmoMC in a directory called COSMOMC..PATH, an
 Note you need to use ifort 13 or higher to build CosmoMC, so make sure you have that configured before you start.
 <UL>
 <LI>Download and extract the plc_1.0 directories somewhere convenient, probably not under cosmomc.
-<LI>Change to the plc_1.0  directory and do 
+<LI>Change to the plc_1.0  directory and do
 <pre>bzip2 -d plc-1.0.tar.bz2; tar -xf plc-1.0.tar</pre>
 <LI><pre>cd plc-1.0</pre>
 <LI><pre>./waf configure --lapack_mkl=${MKLROOT} --lapack_mkl_version=10.3 --install_all_deps</pre>
@@ -49,18 +49,37 @@ For the program to know about the structure of the grid you first need to initia
 <PRE>
 python python/makeGrid.py PLA settings_planck_nominal
 </PRE>
-When done it will tell you the commands needed to run and reproduce the chains. But of course you don't need to do that, you have the chains already. You can now use the python/* scripts on the PLA directory, and they will know about the available data.
+When done it will tell you the commands needed to be run  to reproduce the chains. But of course you don't need to do that, you have the chains already. You can now use the python/* scripts on the PLA directory, and they will know about the available data.
 Settings for the Planck parameter grid are in python/settings_planck_nominal.py.
+<H4>Calculating derived parameters</H4>
+For simple calculations like finding the mean and variance of new derived parameters you can use the functions in python/chains.py. For exmaple, if you want to calculate the posterior mean and limits for sigma8*Omegam^0.6 from Planck+WP+highL+lensing you could write a python script 
+<blockquote>
+<pre>
+import chains
+
+rootdir = r'./PLA/'
+
+chains = chains.loadGridChain(rootdir, 'base', 'planck_lowl_lowLike_highL', 'lensing')
+
+p = chains.getParams()
+
+derived = p.sigma8 * p.omegam ** 0.6
+
+print 'mean, err = ', chains.mean(derived), chains.std(derived)
+print '95% limits: ', chains.twoTailLimits(derived, 0.95)
+</pre>
+</blockquote>
+See python/chains.py for other simple functions you can use. Use GetDist if you want to reproduce Planck results: chains.py only does tail integrals, it does not check for skewness or calculate credible intervals for skewed distributions.
 <H4>Plotting</H4>
 To make plots from the grid you need to first run getdist over the grid. To do this make sure you have installed and compiled CosmoMC (with getdist) then run
 <PRE>
-python python/runGridGetdist.py PLA
+python python/runGridGetdist.py PLA --burn_removed
 </PRE>
 This may take a while. It generates a VERY large number of plotting files in PLA/plot_data for the entire grid. You can use optional parameters for runGridGetdist.py if you want to restrict to specific models; run <b>python python/runGridGetdist.py</b> to see the full list of options. For example if you are only interested in models with massive neutrinos using Planck data you could do
 <PRE>
 python python/runGridGetdist.py PLA --paramtag base_mnu --data planck
 </PRE>
-Getdist generates .m scripts in each PLA/../../dist subfolder, which you can run in matlab. Or, now usually recommended, use the python scripts. You can use <B>python python/makePlots.py PLA  ..</B> to make plots en masse. See <b>batch1/outputs/makeGridPlots</b> for examples. 
+Getdist generates .m scripts in each PLA/../../dist subfolder, which you can run in matlab. Or, now usually recommended, use the python scripts. You can use <B>python python/makePlots.py PLA  ..</B> to make plots en masse. See <b>batch1/outputs/makeGridPlots</b> for examples.
 <P>
 You can also write your own short python scripts to plot things of interest; many examples are in <b>batch1/outputs/</b>. For example, assuming you've done runGridGetdist on the base planck and WMAP chains, you can do
 <pre>
