--- a/readme_planck.html
+++ b/readme_planck.html
@@ -55,7 +55,7 @@ python python/makeGrid.py PLA settings_planck_nominal
 When done it will tell you the commands needed to be run  to reproduce the chains. But of course you don't need to do that, you have the chains already. You can now use the python/* scripts on the PLA directory, and they will know about the available data.
 Settings for the Planck parameter grid are in python/settings_planck_nominal.py.
 <H4>Calculating derived parameters</H4>
-For simple calculations like finding the mean and variance of new derived parameters you can use the functions in python/chains.py. For example, if you want to calculate the posterior mean and limits for sigma8*Omegam^0.6 from Planck+WP+highL+lensing you could write a python script 
+For simple calculations like finding the mean and variance of new derived parameters you can use the functions in python/chains.py. For example, if you want to calculate the posterior mean and limits for sigma8*Omegam^0.6 from Planck+WP+highL+lensing you could write a python script
 <blockquote>
 <pre>
 import chains
@@ -86,7 +86,7 @@ python python/runGridGetdist.py PLA --paramtag base_mnu --data planck
 </PRE>
 Getdist generates .m scripts in each PLA/../../dist subfolder, which you can run in matlab. Or, now usually recommended, use the python scripts. You can use <B>python python/makePlots.py PLA  ..</B> to make plots en masse. See <b>batch1/outputs/makeGridPlots</b> for examples.
 <P>
-You can also write your own short python scripts to plot things of interest; many examples are in <b>batch1/outputs/</b>. For example, assuming you've done runGridGetdist on the base planck and WMAP chains, you can do
+You can also write your own short python scripts to plot things of interest; many examples are in <b>batch1/outputs/</b> (note that these use planckStyle.py, which assumed your main grid directory is ./main not ./PLA, and needs output folders called outputs and plots). For example, assuming you've done runGridGetdist on the base planck and WMAP chains, you can do
 <pre>
 python batch1/outputs/triangle_planckonly_vs_WMAP.py
 </pre>
