--- a/readme_planck.html
+++ b/readme_planck.html
@@ -91,4 +91,17 @@ You can also write your own short python scripts to plot things of interest; man
 python batch1/outputs/triangle_planckonly_vs_WMAP.py
 </pre>
 to reproduce the figure in Section 3 of the Planck parameter paper.
+<P>
+As an example python script not using planckStyle you can do
+<pre>
+import GetDistPlots
+g=GetDistPlots.GetDistPlotter('PLA/plot_data')
+g.settings.setWithSubplotSize(2)
+
+roots = ['base_nnu_mnu_planck_lowl_lowLike','base_nnu_mnu_planck_lowl_lowLike_highL','base_nnu_mnu_planck_lowl_lowLike_highL_post_BAO']
+g.plot_2d(roots, param_pair=['mnu','nnu'], filled=True)
+g.add_legend(['Planck+WP','Planck+WP+highL','Planck+WP+highL+BAO'],legend_loc='upper right');
+g.export('mnu_nnu.pdf')
+</pre>
+
 </body>
