--- a/readme_planck.html
+++ b/readme_planck.html
@@ -93,15 +93,30 @@ python batch1/outputs/triangle_planckonly_vs_WMAP.py
 to reproduce the figure in Section 3 of the Planck parameter paper.
 <P>
 As an example python script not using planckStyle you can do
+<blockquote>
 <pre>
 import GetDistPlots
 g=GetDistPlots.GetDistPlotter('PLA/plot_data')
-g.settings.setWithSubplotSize(5)
+g.settings.setWithSubplotSize(4)
 
 roots = ['base_nnu_mnu_planck_lowl_lowLike','base_nnu_mnu_planck_lowl_lowLike_highL','base_nnu_mnu_planck_lowl_lowLike_highL_post_BAO']
 g.plot_2d(roots, param_pair=['mnu','nnu'], filled=True)
 g.add_legend(['Planck+WP','Planck+WP+highL','Planck+WP+highL+BAO'],legend_loc='upper right');
 g.export('mnu_nnu.png')
 </pre>
+</blockquote>
+The legend overlaps a bit. You can do "import pylab *" and use standard matplotlib commands. Or you can try things like this
+<blockquote>
+<pre>
+import GetDistPlots
+g=GetDistPlots.GetDistPlotter('PLA/plot_data')
+g.settings.setWithSubplotSize(4)
+g.make_figure(xstretch=1.3)
 
+roots = ['base_nnu_mnu_planck_lowl_lowLike','base_nnu_mnu_planck_lowl_lowLike_highL','base_nnu_mnu_planck_lowl_lowLike_highL_post_BAO']
+g.plot_2d(roots, param_pair=['mnu','nnu'], filled=True)
+g.add_legend(['Planck+WP','Planck+WP+highL','Planck+WP+highL+BAO'],legend_loc='upper right',colored_text=True);
+g.export('mnu_nnu2.png')
+</pre>
+</blockquote>
 </body>
