--- a/readme_planck.html
+++ b/readme_planck.html
@@ -119,4 +119,8 @@ g.add_legend(['Planck+WP','Planck+WP+highL','Planck+WP+highL+BAO'],legend_loc='u
 g.export('mnu_nnu2.png')
 </pre>
 </blockquote>
+Outputs of the two versions should look like this:<BR>
+<IMG SRC="http://cosmologist.info/cosmomc/pics/planck/mnu_nnu.png">
+<IMG SRC="http://cosmologist.info/cosmomc/pics/planck/mnu_nnu2.png">
+
 </body>
